DotBlue/tests/valid/PropertySpacing_4.php
<?php

class Foo
{

    /**
     * @var string
     */
    private $a;



    /**
     * constructor
     */
    public function __construct() { }

}