DotBlue/tests/invalid/PropertySpacing_3.php
<?php

class Foo
{

    public $a;



    protected $b;



    private $c;



    protected $d;



    public function __construct() { }

}